# Blink_Main

./: .coverage  .dockerignore  .gitignore  Dockerfile  Dockerfile.cpu  LICENSE  README.md  advanced_features.py  blink_github_action.py  codebase_analysis.md  colab_data_collector.ipynb  dashboard.py  docker-compose.yml  dynamic_gpu_predictor.py  dynamic_predictor.py  external_model_predictor.py  gnn_extractor.py  gnn_model.py  gpu_info.py  gpu_predictor.py  implementation_plan-transformers.md  implementation_plan.md  implementation_plan.md.resolved  implementation_plan_llm support for business  model_analyser.py  model_profiler.py  neusight_ml_analysis.md.resolved  performance_monitor.py  prediction_api.py  prediction_model.py  program.md  prove_leakage.py  pyproject.toml  requirements.txt  run_agent.py  start_api.bat  tmp_count.py  tmp_validate.py  tmp_verify2.py  train_eval_blink.py  (+7 more)
.github/workflows/: blink_pr_check.yml  ci.yml  publish.yml
api/: __init__.py  main.py  schemas.py
blink/: __init__.py  __main__.py  _analyzer.py  _predictor.py  feature_extractor.py  gnn_extractor.py  gnn_model.py  gpu_predictor.py  model_analyser.py  py.typed
blink/weights/: execution_lower_model.joblib  execution_upper_model.joblib  median_quantile_(0.5)_model.joblib  memory_lower_model.joblib  memory_model.joblib  memory_upper_model.joblib  random_forest_model.joblib
blink_gpu-0.2.0/blink/: gpu_predictor.py
data/enriched/: causal_llm_20260318_162412.csv  enriched_data.csv
legacy/: check_cols.py  diagnose_data.py  gnn_test.json  test_gnn_bug.py  web_dashboard.py  web_dashboard_enhanced.py  web_dashboard_simple.py
models/: memory_model_features.json  xgb_latency.pkl
paper/: blink_architecture_tikz.tex  blink_ieee_paper.tex  generate_figures.py
results/: ablation_study_table.csv  calibration_report.txt  diverse_architectures_predictions.csv  diverse_models_predictions.csv  evaluation_gnn_vs_xgb.csv  final_metrics.txt  gnn_scaling_table.csv  gnn_scaling_test.txt  table1_gpu_timing.csv
scripts/: ablation_study.py  calibration_check.py  capture_screenshots.py  collect_data.py  diverse_architectures.py  enhance_dataset.py  generate_paper_figures.py  generate_paper_tables.py  profile_missing.py  profile_target_models.py  shap_explainer.py
tests/: evaluate_gnn_vs_xgb.py  test_blink_sdk.py  test_feature_extractor.py  test_gnn_extractor.py  test_gnn_model.py  test_gnn_scaling.py  test_gpu_predictor.py  test_main.py  test_model_analyser.py  test_predictor.py  test_profiler.py
